--- a/style.css
+++ b/style.css
@@ -1,171 +1,167 @@
 @font-face {
+	
+  font-family: Roboto;
+  src: url('fonts/RobotoMono-Regular.ttf');
+	
+}
+	
+body {
+
 	font-family: Roboto;
-	src: url('fonts/RobotoMono-Regular.ttf');
-  }
-	  
-  body {
-  
-	  font-family: Roboto;
-	  font-size: 30px;
-	  color: #dddddd;
-	  background-color: #1c1c1c;
-	  text-align: center;
-  
-  }
-  
-  .subTitle {margin: 10px}
-  #outputTitle {margin: 20px}
-  
-  .title {
-  
-	  padding: 10px;
-	  background-color: #202020;
-	  border: 1px solid #404040;
-	  border-bottom: 0px;
-	  border-radius: 10px;
-	  border-bottom-left-radius: 0px;
-	  border-bottom-right-radius: 0px;
-	  width: 75%;
-	  margin: auto;
-	  margin-bottom: 0px;
-	  
-  }
-  
-  .convertButton {
-  
-	  font-size: 30px;
-	  font-family: Roboto;
-	  color: #808080;
-	  background-color: #101010;
-	  border-radius: 10px;
-	  border: 1px solid #404040;
-	  padding: 15px;
-	  margin: 0px;
-	  margin-top: 10px;
-  
-  }
-  
-  .convertButton :hover {
-	  
-	  color: #dddddd;
-  
-  }
-  
-  .inputField {
-  
-	  font-family: Roboto;
-	  font-size: 30px;
-	  color: #808080;
-	  background-color: #404040;
-	  border: 1px solid #808080;
-	  border-radius: 5px;
-	  padding: 7.5px;
-	  width: 90%;
-	  margin: auto;
-	  max-width: 90%;
-	  word-wrap: break-word;
-	  text-align: left;
-	  
-  }
-  
-  #inputBaseField {
-  
-	  font-family: Roboto;
-	  font-size: 30px;
-	  color: #808080;
-	  background-color: #404040;
-	  border: 1px solid #808080;
-	  border-radius: 5px;
-	  padding: 7.5px;
-	  width: 10%;
-	  margin: auto;
-	  max-width: 10%;
-	  word-wrap: break-word;
-	  text-align: left;
-	  
-  }
-  
-  #inputIntegerField {
-  
-	  font-family: Roboto;
-	  font-size: 30px;
-	  color: #808080;
-	  background-color: #404040;
-	  border: 1px solid #808080;
-	  border-radius: 5px;
-	  padding: 7.5px;
-	  width: 80%;
-	  margin: auto;
-	  max-width: 80%;
-	  word-wrap: break-word;
-	  text-align: left;
-	  
-  }
-  
-  #outputBaseField {
-  
-	  font-family: Roboto;
-	  font-size: 30px;
-	  color: #808080;
-	  background-color: #404040;
-	  border: 1px solid #808080;
-	  border-radius: 5px;
-	  padding: 7.5px;
-	  width: 95%;
-	  margin: auto;
-	  max-width: 95%;
-	  word-wrap: break-word;
-	  text-align: left;
-	  
-  }
-  
-  .outputField {
-  
-	  font-size: 30px;
-	  color: #808080;
-	  background-color: #404040;
-	  border: 1px solid #808080;
-	  border-radius: 5px;
-	  padding: 7.5px;
-	  width: 95%;
-	  margin: auto;
-	  max-width: 95%;
-	  word-wrap: break-word;
-	  text-align: left;
-  
-  }
-  
-  .copyToClipboard {
-  
-	  font-size: 30px;
-	  color: #808080;
-	  font-family: Roboto;
-	  background-color: #101010;
-	  border: 1px solid #404040;
-	  height: 50px;
-	  border-radius: 5px;
-	  width: 55%;
-	  margin: auto;
-	  margin-top: 10px;
-	  
-  }
-  
-  .copyToClipboard :hover {
-  
-	  color: #dddddd;
-	  
-  }
-  
-  .content {
-  
-	  background-color: #202020;
-	  width: 75%;
-	  margin: auto;
-	  padding: 10px;
-	  margin-top: 0px;
-	  border-radius: 10px;
-	  border-top-left-radius: 0px;
-	  border-top-right-radius: 0px;
-	  border: 1px solid #404040;
-	  
-  }
+	font-size: 20px;
+	color: #dddddd;
+	background-color: #1c1c1c;
+	text-align: center;
+
+}
+
+.subTitle {margin: 10px}
+#outputTitle {margin: 20px}
+
+.title {
+
+	font-size: 50px;
+	padding: 10px;
+	background-color: #202020;
+	border: 1px solid #404040;
+	border-bottom: 0px;
+	border-radius: 10px;
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
+	width: 75%;
+	margin: auto;
+	margin-bottom: 0px;
+	
+}
+
+.convertButton {
+
+	font-size: 30px;
+	font-family: Roboto;
+	color: #808080;
+	background-color: #101010;
+	border-radius: 10px;
+	border: 1px solid #404040;
+	padding: 15px;
+	margin: 0px;
+	margin-top: 10px;
+
+}
+
+.convertButton :hover {color: #dddddd}
+
+.inputField {
+
+	font-family: Roboto;
+	font-size: 30px;
+	color: #808080;
+	background-color: #404040;
+	border: 1px solid #808080;
+	border-radius: 5px;
+	padding: 7.5px;
+	width: 90%;
+	margin: auto;
+	max-width: 90%;
+	word-wrap: break-word;
+	text-align: left;
+	
+}
+
+#inputBaseField {
+
+	font-family: Roboto;
+	font-size: 30px;
+	color: #808080;
+	background-color: #404040;
+	border: 1px solid #808080;
+	border-radius: 5px;
+	padding: 7.5px;
+	width: 15%;
+	margin: auto;
+	max-width: 15%;
+	word-wrap: break-word;
+	text-align: left;
+	
+}
+
+#inputIntegerField {
+
+	font-family: Roboto;
+	font-size: 30px;
+	color: #808080;
+	background-color: #404040;
+	border: 1px solid #808080;
+	border-radius: 5px;
+	padding: 7.5px;
+	width: 80%;
+	margin: auto;
+	max-width: 80%;
+	word-wrap: break-word;
+	text-align: left;
+	
+}
+
+#outputBaseField {
+
+	font-family: Roboto;
+	font-size: 30px;
+	color: #808080;
+	background-color: #404040;
+	border: 1px solid #808080;
+	border-radius: 5px;
+	padding: 7.5px;
+	width: 97.5%;
+	margin: auto;
+	max-width: 97.5%;
+	word-wrap: break-word;
+	text-align: left;
+	
+}
+
+.outputField {
+
+	font-size: 30px;
+	color: #808080;
+	background-color: #404040;
+	border: 1px solid #808080;
+	border-radius: 5px;
+	padding: 7.5px;
+	width: 97.5%;
+	margin: auto;
+	max-width: 97.5%;
+	word-wrap: break-word;
+	text-align: left;
+
+}
+
+.copyToClipboard {
+
+	font-size: 30px;
+	color: #808080;
+	font-family: Roboto;
+	background-color: #101010;
+	border: 1px solid #404040;
+	border-radius: 10px;
+	width: 19ch;
+	margin: auto;
+	margin-top: 10px;
+	padding: 15px;
+	text-align: center;
+	
+}
+
+.copyToClipboard :hover {color: #dddddd}
+
+.content {
+
+	background-color: #202020;
+	width: 75%;
+	margin: auto;
+	padding: 10px;
+	margin-top: 0px;
+	border-radius: 10px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border: 1px solid #404040;
+	
+}
