--- a/style.css
+++ b/style.css
@@ -28,9 +28,23 @@ body {
 	border-radius: 10px;
 	border-bottom-left-radius: 0px;
 	border-bottom-right-radius: 0px;
-	width: 75%;
+	width: 50%;
 	margin: auto;
 	margin-bottom: 0px;
+	
+}
+
+.content {
+
+	background-color: #202020;
+	width: 50%;
+	margin: auto;
+	padding: 10px;
+	margin-top: 0px;
+	border-radius: 10px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border: 1px solid #404040;
 	
 }
 
@@ -44,7 +58,6 @@ body {
 	border: 1px solid #404040;
 	padding: 15px;
 	margin: 0px;
-	margin-top: 10px;
 
 }
 
@@ -62,7 +75,6 @@ body {
 	width: 90%;
 	margin: auto;
 	max-width: 90%;
-	word-wrap: break-word;
 	text-align: left;
 	
 }
@@ -110,9 +122,9 @@ body {
 	border: 1px solid #808080;
 	border-radius: 5px;
 	padding: 7.5px;
-	width: 97.5%;
+	width: 15%;
 	margin: auto;
-	max-width: 97.5%;
+	max-width: 15%;
 	word-wrap: break-word;
 	text-align: left;
 	
@@ -126,17 +138,20 @@ body {
 	border: 1px solid #808080;
 	border-radius: 5px;
 	padding: 7.5px;
-	width: 97.5%;
+	width: 80%;
 	margin: auto;
+	margin-bottom: 10px;
 	max-width: 97.5%;
 	word-wrap: break-word;
 	text-align: left;
+	display: inline-block;
 
 }
 
 .copyToClipboard {
 
 	font-size: 30px;
+	padding: 15px;
 	color: #808080;
 	font-family: Roboto;
 	background-color: #101010;
@@ -144,24 +159,10 @@ body {
 	border-radius: 10px;
 	width: 19ch;
 	margin: auto;
-	margin-top: 10px;
-	padding: 15px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 	text-align: center;
 	
 }
 
 .copyToClipboard :hover {color: #dddddd}
-
-.content {
-
-	background-color: #202020;
-	width: 75%;
-	margin: auto;
-	padding: 10px;
-	margin-top: 0px;
-	border-radius: 10px;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
-	border: 1px solid #404040;
-	
-}
